Chapter 6 exercises done

--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -9,12 +9,33 @@
     <h1>Rango says...</h1>
     <div>Hey there partner!</div>
 
+
     <div>
+
+        <h3>Most liked Categories</h3>
+
         {% if categories %}
         <ul>
             {% for category in categories %}
                 <li>
                     <a href="/rango/category/{{ category.slug }}">{{ category.name }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+        {% else %}
+            <strong>There are no categories present</strong>
+        {% endif %}
+    </div>
+
+    <div>
+
+        <h3>Most viewed Pages</h3>
+
+        {% if pages %}
+        <ul>
+            {% for page in pages %}
+                <li>
+                    <a href="{{ page.url }}">{{ page.title }}</a>
                 </li>
             {% endfor %}
         </ul>
